--- a/package.json
+++ b/package.json
@@ -1,35 +1,27 @@
 {
-  "name": "tubenote-backend",
+  "name": "tubnote-backend",
   "version": "1.0.0",
-  "main": "index.ts",
+  "repository": "https://github.com/Lahbiyeb-Ismail/tubnote-backend.git",
+  "author": "Lahbiyeb Ismail <ismaillhbibe@gmail.com>",
+  "license": "MIT",
+  "main": "./dist/index.js",
+  "type": "commonjs",
   "scripts": {
-    "lint": "eslint '*/**/*.{ts,tsx}'",
-    "format": "prettier --write '*/**/*.{ts,tsx,json}'",
-    "dev": "nodemon index.ts"
+    "start": "nodemon",
+    "dev": "tsc --project './tsconfig.build.json' --watch &NODE_ENV=development nodemon --trace-warnings ./dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "helmet": "^7.1.0"
+    "esm": "^3.2.25",
+    "express": "^4.19.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.3.0",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
-    "eslint": "^9.3.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "globals": "^15.3.0",
+    "@types/node": "^20.13.0",
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.2",
-    "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.11.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.5"
   }
 }
