--- a/package.json
+++ b/package.json
@@ -7,21 +7,42 @@
   "main": "./dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon",
-    "dev": "tsc --project './tsconfig.build.json' --watch &NODE_ENV=development nodemon --trace-warnings ./dist/index.js"
+    "dev": "tsc --project './tsconfig.build.json' --watch &NODE_ENV=development nodemon --trace-warnings ./dist/index.js",
+    "build": "tsc --project './tsconfig.build.json'",
+    "start": "yarn run build && NODE_ENV=production node --trace-warnings ./dist/index.js",
+    "watch": "tsc --project './tsconfig.build.json' --watch",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "prettier": "prettier --write src/**/*.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "esm": "^3.2.25",
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.13.0",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "concurrently": "^8.2.2",
+    "eslint": "9.x",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^17.7.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.2.0",
+    "eslint-plugin-security": "^3.0.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "globals": "^15.3.0",
     "nodemon": "^3.1.2",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.11.0"
   }
 }
