--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "prettier": "prettier --write src/**/*.ts"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "googleapis": "^137.1.0",
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "@types/compression": "^1.7.5",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/node": "^20.13.0",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
@@ -44,5 +49,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.11.0"
-  }
+  },
+  "eslintIgnore": [
+    "dist/**"
+  ]
 }
