--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,14 @@
     "prettier": "prettier --write src/**/*.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "googleapis": "^137.1.0",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "prisma": "^5.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
